Fixed UI bugs (load anim), improved file upload screen, added new queries alongside better contact screen for a given person, added more padding in home screen to avoid bottom nav from overlapping images, fixed some errors due to react keys in arrays.

--- a/src/App.css
+++ b/src/App.css
@@ -21,6 +21,7 @@
 
 .app-div
 {
+  position: absolute;
   margin: 0;
   padding: 0;
   width: 100%;
@@ -37,7 +38,9 @@
 
 .content
 {
-  padding: 20px;
+  height:  100%;
+  width: 100%;
+  padding: 20px 20px 70px 20px; /* slightly more at bottom, account for bottom nav*/
 }
 
 
